; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_matrix4.c_matrix4_rotate_aa_i.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_matrix4.c_matrix4_rotate_aa_i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.axisang = type { i32 }
%struct.matrix4 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @matrix4_rotate_aa_i(%struct.matrix4* %0, %struct.axisang* %1, %struct.matrix4* %2) #0 {
  %4 = alloca %struct.matrix4*, align 8
  %5 = alloca %struct.axisang*, align 8
  %6 = alloca %struct.matrix4*, align 8
  %7 = alloca %struct.matrix4, align 4
  store %struct.matrix4* %0, %struct.matrix4** %4, align 8
  store %struct.axisang* %1, %struct.axisang** %5, align 8
  store %struct.matrix4* %2, %struct.matrix4** %6, align 8
  %8 = load %struct.axisang*, %struct.axisang** %5, align 8
  %9 = call i32 @matrix4_from_axisang(%struct.matrix4* %7, %struct.axisang* %8)
  %10 = load %struct.matrix4*, %struct.matrix4** %4, align 8
  %11 = load %struct.matrix4*, %struct.matrix4** %6, align 8
  %12 = call i32 @matrix4_mul(%struct.matrix4* %10, %struct.matrix4* %7, %struct.matrix4* %11)
  ret void
}

declare dso_local i32 @matrix4_from_axisang(%struct.matrix4*, %struct.axisang*) #1

declare dso_local i32 @matrix4_mul(%struct.matrix4*, %struct.matrix4*, %struct.matrix4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
